# plantgenie-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.tools  README.md  docker-compose.yaml  pyproject.toml  pyrefly.toml
.github/workflows/: build-docker-image-release.yaml  build-docker-image.yaml
infra/: .gitignore  README.md  main.tf  outputs.tf  variables.tf
infra/modules/application/: cloud-init.yaml  main.tf  outputs.tf  variables.tf
infra/modules/neo4j/: cloud-init.yaml  main.tf  outputs.tf  variables.tf
infra/modules/nginx/: cloud-init.yaml  main.tf  outputs.tf  variables.tf
infra/modules/queue/: cloud-init.yaml  main.tf  outputs.tf  variables.tf
infra/modules/rabbitmq/: cloud-init.yaml  main.tf  outputs.tf  variables.tf
infra/modules/redis/: cloud-init.yaml  main.tf  outputs.tf  variables.tf
scripts/: go-depth-analysis.py  go-enrichment-classic.py  go-enrichment-elimination.py  task-testing.py
src/plantgenie_api/: __init__.py  celery.py  client.py  dependencies.py  main.py  models.py  tasks.py
src/plantgenie_api/api/: main.py
src/plantgenie_api/api/v1/: __init__.py  models.py  routes.py
src/plantgenie_api/api/v1/annotation/: models.py  routes.py
src/plantgenie_api/api/v1/blast/: __init__.py  models.py  routes.py  tasks.py  utils.py
src/plantgenie_api/api/v1/enrichment/: models.py  routes.py  tasks.py
src/plantgenie_api/api/v1/expression/: models.py  routes.py
src/plantgenie_api/api/v1/genome/: models.py  routes.py
src/plantgenie_api/api/v1/search/: models.py  routes.py
src/plantgenie_api/api/v2/: models.py  routes.py
src/plantgenie_api/api/v2/genes/: models.py  routes.py
src/plantgenie_api/api/v2/lists/: models.py  routes.py
src/plantgenie_api/sqlite/: __init__.py  schema.sql
src/plantgenie_api/src/plantgenie_api/api/v1/search/: models.py
src/tests/: conftest.py
src/tests/e2e/: test_wizard_smoke.py
src/tests/plantgenie_api/: conftest.py  test_app.py  test_integrations.py  test_lists.py
src/tests/plantgenie_api/integrations/: conftest.py  test_blast_pipeline.py  test_sequence.fasta
src/tests/plantgenie_api/unit/: conftest.py  test_annotations.py  test_genes.py  test_lists.py
src/tests/shared/: conftest.py  test_database_connection.py  test_swift_integration.py
src/tests/task_queue/: conftest.py  test_blast_tasks.py  test_container_setup.py
ui/: index.html  package.json
ui/src/: App.test.tsx  App.tsx  index.css  test-utils.tsx
ui/src/api/: plantgenieApi.ts
ui/src/components/: ListDetails.test.tsx  ListDetails.tsx  Navbar.test.tsx  Navbar.tsx  SelectGenome.test.tsx  SelectGenome.tsx  SelectTaxon.test.tsx  SelectTaxon.tsx  Wizard.test.tsx  Wizard.tsx
ui/src/components/genes/: GenePage.test.tsx  GenePage.tsx
ui/src/components/lists/: AddByIdPage.test.tsx  AddByIdPage.tsx  ListPage.test.tsx  ListPage.tsx  MyListsPage.test.tsx  MyListsPage.tsx
ui/src/components/wizard/: Wizard.test.tsx  Wizard.tsx
ui/src/components/wizard/panels/: GenomeSelector.test.tsx  GenomeSelector.tsx  ListName.test.tsx  ListName.tsx  TaxonSelector.test.tsx  TaxonSelector.tsx
ui/src/mocks/: handlers.ts
ui/src/store/: accountSlice.test.ts  accountSlice.ts  hooks.ts  index.ts  useAccountIdSync.test.tsx  useAccountIdSync.ts  wizardSlice.test.ts  wizardSlice.ts
