[project]
name = "plantgenie-api"
version = "0.1.0"
description = "Backend for the PlantGenIE Web Application (and general usage)"
readme = "README.md"
authors = [
    { name = "Jamie McCann", email = "jamie.mccann@umu.se" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "celery[pydantic,redis]>=5.5.0",
    "duckdb>=1.2.0",
    "fastapi[standard]>=0.115.11",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "python-keystoneclient>=5.6.0",
    "python-multipart>=0.0.20",
    "python-swiftclient>=4.8.0",
    "redis>=5.2.1",
]

[project.scripts]
plantgenie-api = "plantgenie_api.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "celery-types>=0.23.0",
    "ipython>=9.3.0",
    "mypy>=1.15.0",
    "pyrefly>=0.18.0",
    "ruff>=0.9.5",
]
