[project]
name = "plantgenie-api"
version = "0.1.0"
description = "Backend for the PlantGenIE Web Application (and general usage)"
readme = "README.md"
authors = [
    { name = "Jamie McCann", email = "jamie.mccann@umu.se" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "celery[pydantic,redis]>=5.5.0",
    "duckdb>=1.2.0",
    "fastapi[standard]>=0.115.11",
    "loguru>=0.7.3",
    "networkx>=3.5",
    "pendulum>=3.1.0",
    "polars[pyarrow]>=1.34.0",
    "py-fasta-validator>=0.6",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "python-keystoneclient>=5.6.0",
    "python-multipart>=0.0.20",
    "python-swiftclient>=4.8.0",
    "redis>=5.2.1",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
]

[project.scripts]
plantgenie-api = "plantgenie_api.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "celery-types>=0.23.0",
    "ipython>=9.3.0",
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "notebook>=7.4.7",
    "pyrefly>=0.18.0",
    "ruff>=0.9.5",
    "types-networkx>=3.5.0.20251001",
]

[tool.mypy]
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = ["swiftclient.*"]
ignore_missing_imports = true

[tool.black]
line-length = 75
